svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lnmp
  labels:
    name: web
spec:
  type: NodePort      #这里代表是NodePort类型的
  ports:
  - name: nginx
    port: 80          #这里的端口和clusterIP(10.97.114.36)对应，即10.97.114.36:80,供内部访问。
    nodePort: 30080
  - name: mysql
    port: 3306
    nodePort: 30306
  selector:
    app: lnmp-pod-label         #这里选择器一定要选择容器的标签，之前写name:kube-node是错的。
